--- a/index.html
+++ b/index.html
@@ -4,43 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Responsive Web Developer Starter - devchallenges.io</title>
+    <title>Minimal Blog Card - ADH</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="any">
 </head>
 <body>
-    <header>
-        <div class="get-started">Get started by editting <b>index.html</b></div>
-        <img class="logo" src="images/logo.svg" alt="Main Logo">
-    </header>
-
-    <main>
-        <img src="images/devchallenges-logo.svg" alt="A beautiful landscape">
-        <h3 class="title">Minimal Blog Card</h3>
-    </main>
-
-    <footer>
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Challenges</div>
-            <div class="link-description">Choose a challenge and start learning by building real-life projects.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/challenges" target="_blank">
-            <div class="link-title">Solutions</div>
-            <div class="link-description">Checkout how orders solve the challenges, compare with yours and give them feedback.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Blogs</div>
-            <div class="link-description">Checkout devchallenges blogs, tutorials, updates. Find useful resources to get you started.</div>
-        </a>
-
-        <a class="link-card" href="https://devchallenges.io/" target="_blank">
-            <div class="link-title">Deploy</div>
-            <div class="link-description">How to deploy and submit your solution.</div>
-        </a>
-       
-    </footer>
-
-    <script src="script.js"></script>
+    <article class="card">
+        <div class="card-image">
+            <img class="card-image__image" src="./images/cactus_img.jpg" alt="img">
+            <span class="card-image__category">Design</span>
+        </div>
+        <div class="card-content">
+            <h3 class="card-content__title">Embracing Minimalism</h3>
+            <p class="card-content__description">
+                From minimalist sculptures to minimalist paintings, this blog will 
+                inspire you to appreciate the beauty that lies in simplicity.
+            </p>
+            <span class="card-content__author">
+                Annie Spratt
+            </span>
+        </div>
+    </article>
 </body>
 </html>
